DPO Fine Tuning V1.0

--- a/finetuing-gpt-4o-with-dpo.ipynb
+++ b/finetuing-gpt-4o-with-dpo.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {
     "tags": []
    },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 68,
    "metadata": {
     "tags": []
    },
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 69,
    "metadata": {
     "tags": []
    },
@@ -176,8 +176,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training file ID: file-4e2ddb4a63f346b7949cda7957cf238c\n",
-      "Validation file ID: file-6da4001fdd3241ad8e73a26ae8c510b8\n"
+      "Training file ID: file-d1b77f8ee9a94d2d852556e0e5190aba\n",
+      "Validation file ID: file-dda7b1dbb1784cf6ae2c0b444c21b6ae\n"
      ]
     }
    ],
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 70,
    "metadata": {
     "tags": []
    },
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +668,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>{'messages': [{'role': 'user', 'content': 'Wri...</td>\n",
+       "      <td>{'messages': [{'role': 'user', 'content': 'Wha...</td>\n",
        "      <td>[{'role': 'assistant', 'content': 'To effectiv...</td>\n",
        "      <td>[{'role': 'assistant', 'content': 'Download Du...</td>\n",
        "    </tr>\n",
@@ -678,7 +678,7 @@
       ],
       "text/plain": [
        "                                               input  \\\n",
-       "0  {'messages': [{'role': 'user', 'content': 'Wri...   \n",
+       "0  {'messages': [{'role': 'user', 'content': 'Wha...   \n",
        "\n",
        "                                    preferred_output  \\\n",
        "0  [{'role': 'assistant', 'content': 'To effectiv...   \n",
@@ -687,7 +687,7 @@
        "0  [{'role': 'assistant', 'content': 'Download Du...  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +695,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "test_df = pd.read_json('./data/training_data/banking_test.jsonl', lines=True)\n",
+    "test_df = pd.read_json('./data/training_data/test.jsonl', lines=True)\n",
     "test_df.head(2)"
    ]
   },
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,7 +772,7 @@
     "        response = client.chat.completions.create(\n",
     "        messages=input_messages['messages'],\n",
     "        model=deployment,\n",
-    "        temperature=0,\n",
+    "        temperature=0.3,\n",
     "    )\n",
     "    \n",
     "        return response.choices[0].message.content\n",
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 82,
    "metadata": {
     "tags": []
    },
@@ -792,7 +792,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05fc4f975388442a87a9d951165f610e",
+       "model_id": "11c51318d33c41fdb778626734d8342d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -807,13 +807,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'role': 'user', 'content': 'Write a Poem on BlockChain?'}]\n"
+      "[{'role': 'user', 'content': 'What are some effective strategies for learning chinese?'}]\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a8cd9d2142ad4a7cad8c208c4e9d3314",
+       "model_id": "f8ee96117c3540a1818089bc153effd6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -828,7 +828,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'role': 'user', 'content': 'Write a Poem on BlockChain?'}]\n"
+      "[{'role': 'user', 'content': 'What are some effective strategies for learning chinese?'}]\n"
      ]
     }
    ],
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -860,10 +860,10 @@
       "text/plain": [
        "{'relevance': 5.0,\n",
        " 'gpt_relevance': 5.0,\n",
-       " 'relevance_reason': 'The RESPONSE is a comprehensive poem that fully addresses the QUERY by providing a creative piece on Blockchain, along with additional insights into its significance and challenges.'}"
+       " 'relevance_reason': 'The RESPONSE is comprehensive and provides a complete answer with additional insights, making it highly relevant to the QUERY.'}"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -905,10 +905,10 @@
       "text/plain": [
        "{'relevance': 5.0,\n",
        " 'gpt_relevance': 5.0,\n",
-       " 'relevance_reason': 'The RESPONSE is a comprehensive poem that fully addresses the QUERY by creatively exploring the concept of Blockchain, its features, and implications, providing additional insights.'}"
+       " 'relevance_reason': 'The RESPONSE fully addresses the QUERY with accurate and complete information, providing a comprehensive list of strategies for learning Chinese along with additional insights into the learning process.'}"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
