--- a/finetuing-gpt-4o-with-dpo.ipynb
+++ b/finetuing-gpt-4o-with-dpo.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DPO fine tuning with AOAI GPT-4o models\n",
+    "# Direct Preference Optimization (DPO) fine tuning with AOAI GPT-4o models\n",
     "\n",
     "Azure OpenAI lets developers customize OpenAI models with their own data and easily deploy their custom model using an easy to use and affordable managed service.\n",
     "\n",
